--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
     </style>
 </head>
 <body>
-    <a href="https://castoroides.github.io/burakura/burakura_2.html" class="button-link">押せ</a>
+    <a href="https://castoroides.github.io/burakura/burakura_2.html" class="button-link">押したあとベージブロックを解け。</a>
 </body>
 </html>
